Bug 192748 - Tree-view thumbnail size changes lead to inconsistent tree-view until restart
Summary: Tree-view thumbnail size changes lead to inconsistent tree-view until restart
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-Album (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-15 10:49 UTC by Guido Schmidt
Modified: 2017-07-28 20:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guido Schmidt 2009-05-15 10:49:31 UTC
Version:           0.10.0 (using 4.2.3 (KDE 4.2.3) "release 120", KDE:KDE4:Factory:Desktop / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.19-3.2-pae

When I change the tree view thumbnail size in the folder-view options and hit OK the _space_ for all thumbnails changes immediately, but only generic thumbnails sizes have changed too while the user selected ones stay the same. For instance a change from 48px to 22px leads to overlapping thumbnails.

After a restart everything is OK.
Comment 1 Andi Clemens 2009-07-01 10:40:58 UTC
Yes I can confirm, sometimes they get resized, sometimes not. Only a restart fixes this.
Comment 2 tessonec 2009-07-11 17:24:42 UTC
I can also confirm this bug
Comment 3 Andi Clemens 2009-10-08 01:41:29 UTC
I guess this might be solved when the folder views are ported to model view.
Comment 4 Andi Clemens 2009-10-20 17:39:26 UTC
SVN commit 1038071 by aclemens:

Set new size in thumbnail load threads after setup has been changed.

BUG:192748

 M  +2 -1      NEWS  
 M  +2 -0      digikam/albumthumbnailloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1038071