Set new size in thumbnail load threads after setup has been changed.

BUG:192748

svn path=/trunk/extragear/graphics/digikam/; revision=1038071